main container left sidebar

--- a/index.html
+++ b/index.html
@@ -38,5 +38,43 @@
 
     </nav>
 
+    <!-- MAIN CONTAIRNER -->
+    <div class="container">
+
+        <!-- LEFT SIDEBAR -->
+        <div class="left-sidebar">
+
+            <div class="sidebar-profile-box">
+                <img src="Images/cover-pic.png" width="100%">
+                <div class="sidebar-profile-info">
+                    <img src="Images/user-1.png">
+                    <h1>Rahul Bumane</h1>
+                    <h3>Web Developer at Microsoft</h3>
+                    <ul>
+                        <li>Your Profile Views<span>52</span></li>
+                        <li>Your Post Views<span>4321</span></li>
+                        <li>Your Connections<span>523</span></li>
+                    </ul>
+                </div>
+                <div class="sidebar-profile-link">
+                    <a href="#"><img src="Images/items.png">My Items</a>
+                    <a href="#"><img src="Images/premium.png">Try Premium</a>
+                </div>
+            </div>
+
+        </div>
+
+        <!-- MAIN CONTENT -->
+        <div class="main-content">
+
+        </div>
+
+        <!-- RIGHT SIDEBAR -->
+        <div class="right-sidebar">
+
+        </div>
+
+    </div>
+
 </body>
 </html>
