--- a/index.html
+++ b/index.html
@@ -62,6 +62,28 @@
                 </div>
             </div>
 
+            <div class="sidebar-activity">
+                <h3>RECENT</h3>
+                <a href="#"><img src="Images/recent.png">Web Development</a>
+                <a href="#"><img src="Images/recent.png">User Interface</a>
+                <a href="#"><img src="Images/recent.png">Online Learning</a>
+                <a href="#"><img src="Images/recent.png">Learn Online</a>
+                <a href="#"><img src="Images/recent.png">Code Better</a>
+                <a href="#"><img src="Images/recent.png">Group Learning</a>
+                <h3>GROUPS</h3>
+                <a href="#"><img src="Images/group.png">Web Design Group</a>
+                <a href="#"><img src="Images/group.png">HTML & CSS Learners</a>
+                <a href="#"><img src="Images/group.png">Python & JS Group</a>
+                <a href="#"><img src="Images/group.png">Learn Coding Online</a>
+                <h3>HASHTAG</h3>
+                <a href="#"><img src="Images/hashtag.png">#webdevelopment</a>
+                <a href="#"><img src="Images/hashtag.png">#userinterface</a>
+                <a href="#"><img src="Images/hashtag.png">#onlinelearning</a>
+                <div class="discover-more-link">
+                    <a href="#">Discover More</a>
+                </div>
+            </div>
+
         </div>
 
         <!-- MAIN CONTENT -->
