--- a/index.html
+++ b/index.html
@@ -94,6 +94,51 @@
         <!-- RIGHT SIDEBAR -->
         <div class="right-sidebar">
 
+            <div class="sidebar-news">
+                <img src="Images/more.png" class="info-icon">
+                <h3>Trending News</h3>
+
+                <a href="#">High demand for skilled manpower</a>
+                <span>1h ago &middot; 10,647 readers</span>
+                <a href="#">Careers growing horizontally too</a>
+                <span>1d ago &middot; 12,847 readers</span>
+                <a href="#">Less work visa for US, more for UK</a>
+                <span>2d ago &middot; 12,877 readers</span>
+                <a href="#">More hiring = higher confidence?</a>
+                <span>3d ago &middot; 1047 readers</span>
+                <a href="#">Gautam Adani is the world's third richest</a>
+                <span>4d ago &middot; 847 readers</span>
+
+                <a href="#" class="read-more-link">Read More</a>
+            </div>
+
+            <div class="sidebar-ad">
+                <small>Ad &middot; &middot; &middot;</small>
+                <p>Master the 5 principals of web-dev</p>
+                <div>
+                    <img src="Images/user-1.png">
+                    <img src="Images/mi-logo.png">
+                </div>
+                <b>Brand and Demand in Xiaomi</b>
+                <a href="#" class="ad-link">Learn More</a>
+            </div>
+
+            <div class="sidebar-useful-links">
+                <a href="#">About</a>
+                <a href="#">Accessibility</a>
+                <a href="#">Help Center</a>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Advertising</a>
+                <a href="#">Get the app</a>
+                <a href="#">More</a>
+
+                <div class="copyright-msg">
+                    <img src="Images/logo.png">
+                    <p>Linked &#169; 2028. All rights reserved</p>
+                </div>
+
+            </div>
+
         </div>
 
     </div>
