completed home page by adding dropdown menu

--- a/index.html
+++ b/index.html
@@ -34,7 +34,46 @@
         </div>
         <div class="navbar-right">
             <div class="online">
-                <img src="Images/user-1.png" class="nav-profile-img">
+                <img src="Images/user-1.png" class="nav-profile-img" onclick="toggleMenu()">
+            </div>
+        </div>
+
+        <!-- Profile DropDown Menu -->
+        <div class="profile-menu-wrap" id="profileMenu">
+            <div class="profile-menu">
+                <div class="user-info">
+                    <img src="Images/user-1.png">
+                    <div>
+                        <h3>Rahul Bumane</h3>
+                        <a href="#">See Your Profile</a>
+                    </div>
+                </div>
+                <hr>
+                <a href="" class="profile-menu-link">
+                    <img src="Images/feedback.png">
+                    <p>Give Feedback</p>
+                    <span>></span>
+                </a>
+                <a href="" class="profile-menu-link">
+                    <img src="Images/setting.png">
+                    <p>Settings & Privacy</p>
+                    <span>></span>
+                </a>
+                <a href="" class="profile-menu-link">
+                    <img src="Images/help.png">
+                    <p>Help & Support</p>
+                    <span>></span>
+                </a>
+                <a href="" class="profile-menu-link">
+                    <img src="Images/display.png">
+                    <p>Display & Accessibility</p>
+                    <span>></span>
+                </a>
+                <a href="" class="profile-menu-link">
+                    <img src="Images/logout.png">
+                    <p>Logout</p>
+                    <span>></span>
+                </a>
             </div>
         </div>
 
@@ -372,6 +411,10 @@
         </div>
 
     </div>
+
+    <!-- SCRIPT -->
+    <script src="script.js"></script>
+
 
 </body>
 
