profile main container

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>LinkedIN_DD</title>
+    <title>LinkedIN_DD/Home</title>
     <link rel="stylesheet" href="style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -45,7 +45,7 @@
                     <img src="Images/user-1.png">
                     <div>
                         <h3>Rahul Bumane</h3>
-                        <a href="#">See Your Profile</a>
+                        <a href="profile.html">See Your Profile</a>
                     </div>
                 </div>
                 <hr>
