--- a/profile.html
+++ b/profile.html
@@ -83,6 +83,7 @@
     <div class="container">
 
         <div class="profile-main">
+
             <div class="profile-container">
                 <img src="Images/cover-pic.png" width="100%">
                 <div class="profile-container-inner">
@@ -95,8 +96,109 @@
                         <img src="Images/user-2.png">
                         <span>1 mutual connection</span>
                     </div>
+                    <div class="profile-btn">
+                        <a href="#" class="primary-btn"><img src="Images/connect.png">Connect</a>
+                        <a href="#"><img src="Images/chat.png">Message</a>
+                    </div>
                 </div>
             </div>
+
+            <div class="profile-description">
+                <h2>About</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Eligendi harum minus earum voluptate quia fugit tempora laudantium quaerat, laboriosam voluptas eius. In dolorem pariatur, inventore, maxime eveniet incidunt, ab nihil ullam odit voluptate nostrum repellat totam labore? Cupiditate, pariatur consectetur!</p>
+                <a href="#" class="see-more-link">See More...</a>
+            </div>
+
+            <div class="profile-description">
+                <h2>Experience</h2>
+                <div class="profile-desc-row">
+                    <img src="Images/microsoft.png" alt="">
+                    <div>
+                        <h3>Lead Front-End Developer</h3>
+                        <b>Microsoft &middot; Full-time</b>
+                        <b>Feb 2022 - Present &middot; 2.5 years</b>
+                        <p>Computer programming is the process of performing a particular computation, usually by designing and building an executable computer program.</p>
+                        <hr>
+                    </div>
+                </div>
+                <div class="profile-desc-row">
+                    <img src="Images/slack.png" alt="">
+                    <div>
+                        <h3>Full Stack Developer</h3>
+                        <b>Slack &middot; Full-time</b>
+                        <b>Jan 2018 - Feb 2022 &middot; 4 years</b>
+                        <p>Computer programming is the process of performing a particular computation, usually by designing and building an executable computer program.</p>
+                        <hr>
+                    </div>
+                </div>
+                <div class="profile-desc-row">
+                    <img src="Images/google.png" alt="">
+                    <div>
+                        <h3>Web Developer</h3>
+                        <b>Google Inc. &middot; Full-time</b>
+                        <b>Jan 2016 - Dec 2017 &middot; 2 years</b>
+                        <p>Computer programming is the process of performing a particular computation, usually by designing and building an executable computer program.</p>
+                        <!-- <hr> -->
+                    </div>
+                </div>
+                <hr>
+                <a href="" class="experience-link">Show all 7 experiences <img src="Images/right-arrow.png"></a>
+            </div>
+
+            <div class="profile-description">
+                <h2>Education</h2>
+                <div class="profile-desc-row">
+                    <img src="Images/stanford.png">
+                    <div>
+                        <h3>Stanford University</h3>
+                        <b>BSEE, Computer Engineering</b>
+                        <b>2012 - 2016</b>
+                        <hr>
+                    </div>
+                </div>
+                <div class="profile-desc-row">
+                    <img src="Images/north.png">
+                    <div>
+                        <h3>Northwestern University</h3>
+                        <b>Computer Engineering</b>
+                        <b>2011 - 2012</b>
+                        <hr>
+                    </div>
+                </div>
+                <div class="profile-desc-row">
+                    <img src="Images/mit.png">
+                    <div>
+                        <h3>Harward University</h3>
+                        <b>Senior High School</b>
+                        <b>2001 - 2011</b>
+                        <!-- <hr> -->
+                    </div>
+                </div>
+            </div>
+
+            <div class="profile-description">
+                <h2>Skills</h2>
+                <a href="#" class="skills-btn">Leadership</a>
+                <a href="#" class="skills-btn">Web Design</a>
+                <a href="#" class="skills-btn">Development</a>
+                <a href="#" class="skills-btn">Communication</a>
+                <a href="#" class="skills-btn">UI/UX</a>
+                <a href="#" class="skills-btn">Planning</a>
+                <a href="#" class="skills-btn">Coding</a>
+                <a href="#" class="skills-btn">C++</a>
+                <a href="#" class="skills-btn">Python</a>
+                <a href="#" class="skills-btn">Entrepreneurship</a>
+                <a href="#" class="skills-btn">DBMS</a>
+            </div>
+
+            <div class="profile-description">
+                <h2>Languages</h2>
+                <a href="" class="language-btn">English</a>
+                <a href="" class="language-btn">German</a>
+                <a href="" class="language-btn">Marathi</a>
+                <a href="" class="language-btn">Hindi</a>
+            </div>
+
         </div>
 
         <!-- PROFILE-SIDEBAR -->
