--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
         </div>
         <div class="navbar-center">
             <ul>
-                <li><a href="#" class="active-link"><img src="Images/home.png"><span>Home</span></a></li>
+                <li><a href="index.html" class="active-link"><img src="Images/home.png"><span>Home</span></a></li>
                 <li><a href="#"><img src="Images/network.png"><span>My Networks</span></a></li>
                 <li><a href="#"><img src="Images/jobs.png"><span>Jobs</span></a></li>
                 <li><a href="#"><img src="Images/message.png"><span>Messaging</span></a></li>
@@ -202,8 +202,77 @@
         </div>
 
         <!-- PROFILE-SIDEBAR -->
-        <div class="profile-sidebar"></div>
+        <div class="profile-sidebar">
 
+            <div class="sidebar-ad">
+                <small>Ad &middot; &middot; &middot;</small>
+                <p>Master the 5 principals of web-dev</p>
+                <div>
+                    <img src="Images/user-1.png">
+                    <img src="Images/mi-logo.png">
+                </div>
+                <b>Brand and Demand in Xiaomi</b>
+                <a href="#" class="ad-link">Learn More</a>
+            </div>
+
+            <div class="sidebar-people">
+                <h2>People you may know</h2>
+                <hr>
+                <div class="sidebar-people-row">
+                    <img src="Images/user-3.png">
+                    <div>
+                        <h3>Samarth Shethe</h3>
+                        <p>Head of Marketing at Alibaba</p>
+                        <a href="#">Connect</a>
+                    </div>
+                </div>
+                <div class="sidebar-people-row">
+                    <img src="Images/user-4.png">
+                    <div>
+                        <h3>Samruddhi Laad</h3>
+                        <p>Head of Marketing at Alibaba</p>
+                        <a href="#">Connect</a>
+                    </div>
+                </div>
+                <div class="sidebar-people-row">
+                    <img src="Images/user-5.png">
+                    <div>
+                        <h3>Sundar Salve</h3>
+                        <p>Head of Marketing at Alibaba</p>
+                        <a href="#">Connect</a>
+                    </div>
+                </div>
+                <div class="sidebar-people-row">
+                    <img src="Images/user-2.png">
+                    <div>
+                        <h3>Shahu Shethe</h3>
+                        <p>Head of Marketing at Alibaba</p>
+                        <a href="#">Connect</a>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </div>
+
+    <!-- PROFILE-FOOTER -->
+    <div class="profile-footer">
+        <div class="sidebar-useful-links">
+            <a href="#">About</a>
+            <a href="#">Accessibility</a>
+            <a href="#">Help Center</a>
+            <a href="#">Privacy Policy</a>
+            <a href="#">Advertising</a>
+            <a href="#">Get the app</a>
+            <a href="#">More</a>
+
+            <div class="copyright-msg">
+                <img src="Images/logo.png">
+                <p>Linked &#169; 2028. All rights reserved</p>
+            </div>
+
+        </div>
     </div>
 
     <!-- SCRIPT -->
