--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         </div>
         <div class="navbar-center">
             <ul>
-                <li><a href="#" class="active-link"><img src="Images/home.png"><span>Home</span></a></li>
+                <li><a href="index.html" class="active-link"><img src="Images/home.png"><span>Home</span></a></li>
                 <li><a href="#"><img src="Images/network.png"><span>My Networks</span></a></li>
                 <li><a href="#"><img src="Images/jobs.png"><span>Jobs</span></a></li>
                 <li><a href="#"><img src="Images/message.png"><span>Messaging</span></a></li>
