--- a/index.html
+++ b/index.html
@@ -125,6 +125,8 @@
                 </div>
             </div>
 
+            <p id="show-more-link" onclick="toggleActivity()">Show More <b>+</b></p>
+
         </div>
 
         <!-- MAIN CONTENT -->
